--- a/kb.html
+++ b/kb.html
@@ -66,8 +66,10 @@ Nav Bar / Header
       <li class="dropdown" dropdown>
         <a class="dropdown-toggle" dropdown-toggle><i class="fa fa-keyboard-o"></i> Preset <b class="caret"></b></a>
         <ul class="dropdown-menu">
+          <li class="dropdown-header">Standard Layouts:</li>
           <li ng-repeat="v in layouts"><a ng-click="loadPreset(v.data)" href="#">{{v.name}}</a></li>
           <li class="divider"></li>
+          <li class="dropdown-header">Complex Samples:</li>
           <li ng-repeat="(k,v) in samples"><a ng-click="loadSample(v)" href="#">{{k}}</a></li>
         </ul>
       </li>
@@ -562,7 +564,11 @@ Help Dialog
   <div class="modal-body">
     <h5>Getting Started:</h5>
     <ul>
-      <li>Try loading one of the preset layouts from the dropdown at the top of the page; it will give you a good idea of the editor's capabilities.</li>
+      <li>Try loading one of the preset layouts from the dropdown at the top of the page.</li>
+      <ul>
+        <li>The <em>standard layouts</em> are intended to be used as a starting point for customization.</li>
+        <li>The <em>complex samples</em> are intended to give you an idea of the editor's capabilities, and to show off some awesome user-creations!</li>
+      </ul>
       <li>Select a key in the editor by clicking on it; then try changing the various properties in the property-editor form.</li>
       <li>You can select multiple keys by holding down CTRL and clicking on them, or extend the current selection by SHIFT-clicking on an item.  You can also drag a marquee rectangle around the keys you want to select.</li>
       <li>Try the keyboard shortcuts (described below); they make editing various properties much quicker.</li>
