Tweak position of keyboard name/author data.
-- Moved around during rendering refactor.

--- a/kb.html
+++ b/kb.html
@@ -186,7 +186,7 @@ Nav Bar / Header
        ng-bind-html="key.html">
     </div>
 
-    <div style="position:relative;line-height:1.2;padding-left:4px;" ng-style="{top:(kbHeight-32)+'px'}"
+    <div style="position:relative;line-height:1.2;" ng-style="{top:(kbHeight-26)+'px'}"
          ng-hide="!keyboard.meta.name &amp;&amp; !keyboard.meta.author">
          <a href="#" ng-click="previewNotes()">{{keyboard.meta.name}}<br/><i>{{keyboard.meta.author}}</i></a>
     </div>
