--- a/kb.html
+++ b/kb.html
@@ -216,62 +216,67 @@ Nav Bar / Header
     <div id="properties" ng-class="{hidden:selTab!=0}">
       <form class="form-horizontal col-sm-8 col-md-5 col-lg-5">
 
-        <!-- Top Label -->
+        <!-- Top Legend -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor0">Top Label:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor0">Top Legend:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
-              <kbd-label-editor label-index="0" hint-text="Specify the primary text of the keycap; typically displayed top-left, unless the centering options are used."></kbd-label-editor>
-              <kbd-label-editor label-index="2" hint-text="Specify secondary text for the keycap; typically displayed top-right."></kbd-label-editor>
-              <kbd-multi-check field="centerx" hint-text="Center the keycap text horizontally; the labels that would normally be left-aligned will be centered instead.">Center X</kbd-multi-check>
+              <kbd-label-editor label-index="0" hint-text="Specify a top-left legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="1" hint-text="Specify a top-center legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="2" hint-text="Specify a top-right legend for the keycap."></kbd-label-editor>
             </div>
           </div>
         </div>
 
-        <!-- Center Label -->
+        <!-- Center Legend -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor6">Center Label:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor3">Center Legend:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
-              <kbd-label-editor label-index="6" hint-text="Specify secondary text for the keycap; typically displayed center-left.  You can specify a horizontal rule with <hr>."></kbd-label-editor>
-              <kbd-label-editor label-index="7" hint-text="Specify secondary text for the keycap; typically displayed center-right."></kbd-label-editor>
-              <kbd-multi-check field="centery" hint-text="Center the keycap text vertically; the labels that would normally be top-aligned will be centered instead.">Center Y</kbd-multi-check>
+              <kbd-label-editor label-index="3" hint-text="Specify a center-left legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="4" hint-text="Specify a center legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="5" hint-text="Specify a center-right legend for the keycap."></kbd-label-editor>
             </div>
           </div>
         </div>
 
-        <!-- Bottom Label -->
+        <!-- Bottom Legend -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor1">Bottom Label:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor6">Bottom Legend:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
-              <kbd-label-editor label-index="1" hint-text="Specify secondary text for the keycap; typically displayed bottom-left."></kbd-label-editor>
-              <kbd-label-editor label-index="3" hint-text="Specify secondary text for the keycap; typically displayed bottom-right."></kbd-label-editor>
+              <kbd-label-editor label-index="6" hint-text="Specify a bottom-left legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="7" hint-text="Specify a bottom-center legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="8" hint-text="Specify a bottom-right legend for the keycap."></kbd-label-editor>
             </div>
           </div>
         </div>
 
-        <!-- Side-Print Label -->
+        <!-- Side-Print Legend -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor4">Side-Print Label:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="labeleditor9">Front Legend:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
-              <kbd-label-editor label-index="4" hint-text="Specify the primary side-printed text for the keycap."></kbd-label-editor>
-              <kbd-label-editor label-index="5" hint-text="Specify secondary side-printed text for the keycap."></kbd-label-editor>
-              <kbd-multi-check field="centerf" hint-text="Center the side-printed text.">Center</kbd-multi-check>
+              <kbd-label-editor label-index="9" hint-text="Specify a front-left legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="10" hint-text="Specify a front-center legend for the keycap."></kbd-label-editor>
+              <kbd-label-editor label-index="11" hint-text="Specify a front-right legend for the keycap."></kbd-label-editor>
             </div>
           </div>
         </div>
 
-        <!-- Legend Size -->
+        <!-- 1 -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="fontheight-editor">Legend Size:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="textSize-editor">Legend Size:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
-                 data-hint="Specify the primary and secondary sizes for the keycap legends. The primary size affects only the primary text legend, while the secondary size is applied to all other legends.">
-              <kbd-multi-numbox field="fontheight" size="6" min="1" max="9"></kbd-multi-numbox>
-              <div class="form-group form-group-sm"> / </div>
-              <kbd-multi-numbox field="fontheight2" size="6" min="1" max="9"></kbd-multi-numbox>
+                 data-hint="Specify the size for the keycap legends. Setting this value will change the size of all legends, and will replace any existing size overrides.">
+              <div class="form-group form-group-sm">
+                <input id="textSize-editor" class="form-control input-sm" size="6" type='number' min="1" max="9"
+                       ng-model="multi.textSize[0]"
+                       ng-change="updateMulti('textSize',-1)"
+                       ng-blur="validateMulti('textSize',-1)"
+                       ng-disabled="selectedKeys.length<1">
+              </div>
             </div>
           </div>
         </div>
@@ -330,7 +335,7 @@ Nav Bar / Header
 
         <!-- Profile / Row -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="profileeditor">Profile / Row:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="profileeditor-search">Profile / Row:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline hint--top hint--rounded"
                data-hint="Specify the profile and (optionally) the row-number of the selected keys, e.g., 'DCS R1', 'DSA', 'DSA SPACE', etc.">
@@ -375,19 +380,19 @@ Nav Bar / Header
           </div>
         </div>
 
-        <!-- Label Color -->
+        <!-- Legend Color -->
         <div class="form-group form-group-sm">
-          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="textcoloreditor">Label Color:</label>
+          <label class="control-label col-md-3 col-lg-3 text-nowrap" for="textcoloreditor">Legend Color:</label>
           <div class="col-md-9 col-lg-9">
             <div class="form-inline">
               <kbd-color-picker picker-id="textcoloreditor" picker-position="top"
-                                ng-model="multi.text[0]"
-                                ng-change="updateMulti('text',-1)"
-                                ng-blur="validateMulti('text')"
+                                ng-model="multi.textColor[0]"
+                                ng-change="updateMulti('textColor',-1)"
+                                ng-blur="validateMulti('textColor',-1)"
                                 ng-disabled="selectedKeys.length<1"
-                                hint-text="Specify the color to use for the legend text on the selected keycaps."
+                                hint-text="Specify the color to use for the legend text on the selected keycaps.  Setting this value will change the color of all legends, and will replace any existing color overrides."
                                 ui-on-Drop="dropSwatch($data,$event,true,-1)" drop-channel="dragColor"></kbd-color-picker>
-              <div class="form-group form-group-sm color-name">{{colorName(multi.text[0])}}</div>
+              <div class="form-group form-group-sm color-name">{{colorName(multi.textColor[0])}}</div>
             </div>
           </div>
         </div>
@@ -428,7 +433,7 @@ Nav Bar / Header
              ng-style="{'background-color':color.css}"
              ng-click="clickSwatch(color,$event)"
              class="swatch hint--top"
-             ng-class="{'selected-bg': color.css === multi.color, 'selected-fg': color.css === multi.text[0]}"
+             ng-class="{'selected-bg': color.css === multi.color, 'selected-fg': color.css === multi.textColor[0]}"
              data-hint="{{color.name}}"
              ui-draggable="true" drag-channel="dragColor" drag="color">
                <div class='highlight fg'></div>
@@ -747,17 +752,24 @@ Angular Templates
              ng-model="$parent.multi.labels[labelIndex]"
              ng-change="$parent.updateMulti('labels',labelIndex)"
              ng-blur="$parent.validateMulti('labels',labelIndex)"
-             ng-disabled="$parent.labelDisabled(labelIndex)">
+             ng-disabled="$parent.selectedKeys.length<1">
       <span class="input-group-btn">
         <button class="btn btn-default"
-               ng-style="{'background-color':$parent.getTextColor($parent.multi.text,labelIndex)}"
-               ng-model="$parent.multi.text[labelIndex]"
-               ng-change="$parent.updateMulti('text',labelIndex)"
+               ng-style="{'background': $parent.selectedKeys.length<1 ? 'rgb(235, 235, 228)' : ($parent.multi.textColor[labelIndex] || 'repeating-linear-gradient(-45deg, transparent, transparent 4px, red 4px, red 5px, transparent 5px, transparent 10px), repeating-linear-gradient(45deg, transparent, transparent 4px, red 4px, red 5px, transparent 5px, transparent 10px)')}"
+               ng-model="$parent.multi.textColor[labelIndex]"
+               ng-change="$parent.updateMulti('textColor',labelIndex)"
                colorpicker="hex"
                colorpicker-close-on-select="true"
                colorpicker-with-input="true"
-               ng-disabled="$parent.labelDisabled(labelIndex)">&nbsp;</button>
+               ng-disabled="$parent.selectedKeys.length<1">&nbsp;</button>
       </span>
+      <input id="textsizeeditor{{labelIndex}}" class="form-control input-sm" size="4" type='number' min="1" max="9"
+             ng-model="$parent.multi.textSize[labelIndex]"
+             ng-change="$parent.updateMulti('textSize',labelIndex)"
+             ng-blur="$parent.validateMulti('textSize',labelIndex)"
+             ng-disabled="$parent.selectedKeys.length<1"
+             ng-style="{visibility:labelIndex<9 ? 'inherit' : 'hidden'}"
+             style="max-width:30px;">
     </div>
   </div>
 </script>
@@ -827,7 +839,7 @@ DOT.js Templates
               <div style='width:{{=parms.textcapwidth}}px; max-width:{{=parms.textcapwidth}}px; height:{{=parms.textcapheight}}px;'>{{=sanitizedLabel}}</div>
             </div>
           {{??}}
-            <div class="hint--top hint--rounded" data-hint="Error: Invalid HTML in label field."><i class="fa fa-times-circle"></i></div>
+            <div class="hint--top hint--rounded" data-hint="Error: Invalid HTML in legend field."><i class="fa fa-times-circle"></i></div>
           {{?}}
         {{?}}
       {{~}}
